tests/errors/c/struct-nested-named.h
/* Named nested unions/structs -- not supported yet */
struct T {
	union {
		int a;
	} foo;
};
